update contract v1.1 was added
