# public/docs/openapi.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
 servers:
   -
-    url: 'http://localhost'
+    url: 'http://localhost/v1'
 paths:
   /v1/test:
     get:
@@ -408,6 +408,171 @@ paths:
                 - ip
                 - clientes
       security: []
+  /v1.1/contracts:
+    post:
+      summary: 'Create Contracts'
+      operationId: createContracts
+      description: "This endpoint allows you to create a 'contract or contracts' in a Mikrotik server.\n<aside class=\"notice\">With this you are able to create \"contracts\" (queues with address-list). </aside>"
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/xml
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: success
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: 'BABEL : ¡Cola/s creada/s con éxito!'
+                properties:
+                  message:
+                    type: string
+                    example: 'BABEL : ¡Cola/s creada/s con éxito!'
+        500:
+          description: 'no payload or missing params'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: "BABEL: Undefined array key 'ip'"
+                properties:
+                  message:
+                    type: string
+                    example: "BABEL: Undefined array key 'ip'"
+      tags:
+        - Endpoints
+      requestBody:
+        required: true
+        content:
+          application/xml:
+            schema:
+              type: object
+              properties:
+                ip:
+                  type: string
+                  description: 'The server ip.'
+                  example: 192.168.1.1
+                clientes:
+                  type: object
+                  description: 'A list of objects that contains the clients params.'
+                  example: []
+                  properties:
+                    cliente_ip:
+                      type: string
+                      description: 'Client IP.'
+                      example: 1.1.1.1
+                    download:
+                      type: string
+                      description: 'Client download speed.'
+                      example: '102400 Kbps'
+                    upload:
+                      type: string
+                      description: 'Client upload speed.'
+                      example: '3072 Kbps'
+                    estado:
+                      type: string
+                      description: 'Client status account.'
+                      example: activo
+              required:
+                - ip
+                - clientes
+      security: []
+    put:
+      summary: 'Update Contracts'
+      operationId: updateContracts
+      description: "This endpoint allows you to update the banwidth profile of a 'contract or contracts' or ip in a Mikrotik server.\n<aside class=\"notice\">With this you are able to update the \"contracts\" (queues with address-list). </aside>"
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/xml
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: success
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: 'BABEL : ¡Cola/s actualizada/s con éxito!'
+                properties:
+                  message:
+                    type: string
+                    example: 'BABEL : ¡Cola/s actualizada/s con éxito!'
+        500:
+          description: 'no payload or missing params'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: "BABEL: Undefined array key 'ip'"
+                properties:
+                  message:
+                    type: string
+                    example: "BABEL: Undefined array key 'ip'"
+      tags:
+        - Endpoints
+      requestBody:
+        required: true
+        content:
+          application/xml:
+            schema:
+              type: object
+              properties:
+                ip:
+                  type: string
+                  description: 'The server ip.'
+                  example: 192.168.1.1
+                clientes:
+                  type: object
+                  description: 'A list of objects that contains the clients params.'
+                  example: []
+                  properties:
+                    cliente_ip:
+                      type: string
+                      description: 'Client IP.'
+                      example: 1.1.1.1
+                    download:
+                      type: string
+                      description: 'Client download speed.'
+                      example: '102400 Kbps'
+                    upload:
+                      type: string
+                      description: 'Client upload speed.'
+                      example: '3072 Kbps'
+                    estado:
+                      type: string
+                      description: 'Client status account.'
+                      example: activo
+              required:
+                - ip
+                - clientes
+      security: []
   /v1/connection/enableConnection:
     patch:
       summary: 'Enable Connections'
@@ -580,7 +745,7 @@ paths:
             type: string
       responses:
         200:
-          description: succes
+          description: success
           content:
             application/json:
               schema:
